@@ -1,9 +1,12 @@
 package com.hbc.tickets.controller;
 
+import com.hbc.tickets.dto.CategoryDTO;
 import com.hbc.tickets.dto.EventDTO;
+import com.hbc.tickets.model.Category;
 import com.hbc.tickets.model.Event;
 import com.hbc.tickets.model.Role;
 import com.hbc.tickets.model.User;
+import com.hbc.tickets.repository.CategoryRepository;
 import com.hbc.tickets.repository.EventRepository;
 import com.hbc.tickets.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,8 +17,10 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -27,6 +32,10 @@ import java.util.stream.Collectors;
 @RestController
 @RequestMapping("/api/events")
 public class EventController {
+	
+	@Autowired
+	private CategoryRepository categoryRepository;
+
 
     @Autowired
     private EventRepository eventRepository;
@@ -50,17 +59,26 @@ public class EventController {
         }
 
         // Mapear eventos a DTO
-        List<EventDTO> eventDTOs = events.stream().map(event -> new EventDTO(
-            event.getId(),
-            event.getTitle(),
-            event.getDescription(),
-            event.getDate(),
-            event.getSoldTickets(),
-            event.getAvailableTickets(),
-            event.getImageUrl(),
-            event.getLocalizacion(),
-            event.getOrganizer().getUsername()  // Solo el nombre de usuario del organizador
-        )).collect(Collectors.toList());
+        List<EventDTO> eventDTOs = events.stream().map(event -> {
+            List<CategoryDTO> categoryDTOs = event.getCategories().stream()
+                    .map(category -> new CategoryDTO(category.getId(), category.getName()))  // Mapeamos las categorías a CategoryDTO
+                    .collect(Collectors.toList());
+
+            return new EventDTO(
+                event.getId(),
+                event.getTitle(),
+                event.getDescription(),
+                event.getDate(),
+                event.getSoldTickets(),
+                event.getAvailableTickets(),
+                event.getImageUrl(),
+                event.getLocalizacion(),
+                event.getPrice(),
+                event.getOrganizer().getUsername(),
+                event.getEventUrl(),
+                categoryDTOs  // Asignamos las categorías mapeadas
+            );
+        }).collect(Collectors.toList());
 
         return ResponseEntity.ok(eventDTOs);
     }
@@ -74,17 +92,26 @@ public class EventController {
         }
 
         // Mapear eventos a DTO
-        List<EventDTO> eventDTOs = events.stream().map(event -> new EventDTO(
-            event.getId(),
-            event.getTitle(),
-            event.getDescription(),
-            event.getDate(),
-            event.getSoldTickets(),
-            event.getAvailableTickets(),
-            event.getImageUrl(),
-            event.getLocalizacion(),
-            event.getOrganizer().getUsername()
-        )).collect(Collectors.toList());
+        List<EventDTO> eventDTOs = events.stream().map(event -> {
+            List<CategoryDTO> categoryDTOs = event.getCategories().stream()
+                    .map(category -> new CategoryDTO(category.getId(), category.getName()))  // Mapeamos las categorías a CategoryDTO
+                    .collect(Collectors.toList());
+
+            return new EventDTO(
+                    event.getId(),
+                    event.getTitle(),
+                    event.getDescription(),
+                    event.getDate(),
+                    event.getSoldTickets(),
+                    event.getAvailableTickets(),
+                    event.getImageUrl(),
+                    event.getLocalizacion(),
+                    event.getPrice(),
+                    event.getOrganizer().getUsername(),
+                    event.getEventUrl(),
+                    categoryDTOs  // Asignamos las categorías mapeadas
+                );
+            }).collect(Collectors.toList());
 
         return ResponseEntity.ok(eventDTOs);
     }
@@ -94,12 +121,13 @@ public class EventController {
             @RequestParam(value = "title", required = false) String title,
             @RequestParam(value = "description", required = false) String description,
             @RequestParam(value = "date", required = false) String date,
-            @RequestParam(value = "localizacion", required = false) String localizacion) throws ParseException {
+            @RequestParam(value = "localizacion", required = false) String localizacion,
+            @RequestParam(value = "category", required = false) Long categoryId) throws ParseException {
 
         // Lista para almacenar los eventos que coincidan con el filtro
         List<Event> filteredEvents = new ArrayList<>();
 
-        if (title == null && description == null && date == null && localizacion == null) {
+        if (title == null && description == null && date == null && localizacion == null && categoryId == null) {
             filteredEvents = eventRepository.findAll();
         } else {
             if (title != null) {
@@ -116,6 +144,11 @@ public class EventController {
             if (localizacion != null) {
                 filteredEvents.addAll(eventRepository.findByLocalizacionContainingIgnoreCase(localizacion));
             }
+            if (categoryId != null) {
+                // Filtrar por categoría
+                List<Event> eventsByCategory = eventRepository.findByCategoriesId(categoryId);
+                filteredEvents.addAll(eventsByCategory);
+            }
         }
 
         if (filteredEvents.isEmpty()) {
@@ -123,20 +156,30 @@ public class EventController {
         }
 
         // Mapear los eventos a DTOs antes de devolverlos
-        List<EventDTO> eventDTOs = filteredEvents.stream().map(event -> new EventDTO(
-            event.getId(),
-            event.getTitle(),
-            event.getDescription(),
-            event.getDate(),
-            event.getSoldTickets(),
-            event.getAvailableTickets(),
-            event.getImageUrl(),
-            event.getLocalizacion(),
-            event.getOrganizer().getUsername()
-        )).collect(Collectors.toList());
+        List<EventDTO> eventDTOs = filteredEvents.stream().map(event -> {
+            List<CategoryDTO> categoryDTOs = event.getCategories().stream()
+                    .map(category -> new CategoryDTO(category.getId(), category.getName())) // Extraemos los nombres de las categorías
+                    .collect(Collectors.toList());
+
+            return new EventDTO(
+                    event.getId(),
+                    event.getTitle(),
+                    event.getDescription(),
+                    event.getDate(),
+                    event.getSoldTickets(),
+                    event.getAvailableTickets(),
+                    event.getImageUrl(),
+                    event.getLocalizacion(),
+                    event.getPrice(),
+                    event.getOrganizer().getUsername(),
+                    event.getEventUrl(),
+                    categoryDTOs  // Asignamos las categorías mapeadas
+            );
+        }).collect(Collectors.toList());
 
         return ResponseEntity.ok(eventDTOs);
     }
+
 
     @PostMapping("/create")
     public ResponseEntity<?> createEvent(
@@ -144,8 +187,11 @@ public class EventController {
             @RequestParam("description") String description,
             @RequestParam("date") String date,
             @RequestParam("available_tickets") int availableTickets,
-            @RequestParam("localizacion") String localizacion, // nuevo parámetro
-            @RequestParam("image") MultipartFile image, 
+            @RequestParam("localizacion") String localizacion,
+            @RequestParam("price") int price,
+            @RequestParam(value = "event_url", required = false) String eventUrl,  // Campo opcional
+            @RequestParam("image") MultipartFile image,
+            @RequestParam(value = "categories", required = false) List<Long> categoryIds,  // IDs de categorías
             @RequestHeader("Authorization") String token) throws Exception {
 
         // Extraer el nombre de usuario del token JWT
@@ -169,7 +215,7 @@ public class EventController {
         Date eventDate;
         try {
             eventDate = sdf.parse(date);
-        } catch (ParseException e) {
+        } catch (Exception e) {
             return ResponseEntity.status(400).body("Formato de fecha inválido.");
         }
 
@@ -181,13 +227,33 @@ public class EventController {
         event.setAvailableTickets(availableTickets);
         event.setSoldTickets(0);
         event.setLocalizacion(localizacion); // Asignar la localización
+        event.setPrice(price);
 
+        List<Category> categories = new ArrayList<>();
+        if (categoryIds != null) {
+            for (Long categoryId : categoryIds) {
+                Category category = categoryRepository.findById(categoryId).orElse(null);
+                if (category != null) {
+                    categories.add(category);
+                }
+            }
+        }
+        
+        event.setCategories(categories);  // Asignar las categorías al evento
+        event.setEventUrl(eventUrl); 
+        
         // Guardar la imagen si se recibe
         if (image != null && !image.isEmpty()) {
             String originalFileName = StringUtils.cleanPath(image.getOriginalFilename());
 
+            // Crear la carpeta si no existe
+            File uploadDirFile = new File(uploadDir);
+            if (!uploadDirFile.exists()) {
+                uploadDirFile.mkdirs(); // Crea la carpeta si no existe
+            }
+
             // Definir la ruta de destino dentro de "static/images"
-            Path targetLocation = Path.of(new ClassPathResource("static/images").getFile().getAbsolutePath(), originalFileName);
+            Path targetLocation = Paths.get(uploadDir, originalFileName);
 
             // Si el archivo ya existe, agregar un sufijo numérico
             int fileCounter = 1;
@@ -196,13 +262,13 @@ public class EventController {
                 String fileExtension = fileName.substring(fileName.lastIndexOf("."));
                 String baseFileName = fileName.substring(0, fileName.lastIndexOf("."));
                 fileName = baseFileName + fileCounter + fileExtension;
-                targetLocation = Path.of(new ClassPathResource("static/images").getFile().getAbsolutePath(), fileName);
+                targetLocation = Paths.get(uploadDir, fileName);
                 fileCounter++;
             }
 
             // Guardar la imagen
             try {
-                Files.copy(image.getInputStream(), targetLocation, StandardCopyOption.REPLACE_EXISTING);
+                Files.copy(image.getInputStream(), targetLocation);
             } catch (java.io.IOException e) {
                 e.printStackTrace();
                 return ResponseEntity.status(500).body("Error al guardar la imagen.");
@@ -218,5 +284,181 @@ public class EventController {
 
         return ResponseEntity.ok("Evento creado exitosamente.");
     }
+    @PutMapping("/edit/{eventId}")
+    public ResponseEntity<?> editEvent(
+            @PathVariable Long eventId,
+            @RequestParam("title") String title,
+            @RequestParam("description") String description,
+            @RequestParam("date") String date,
+            @RequestParam("available_tickets") int availableTickets,
+            @RequestParam("localizacion") String localizacion,
+            @RequestParam("price") int price,
+            @RequestParam(value = "image", required = false) MultipartFile image, 
+            @RequestParam(value = "categories", required = false) List<Long> categoryIds, // Recibir categorías como lista de IDs
+            @RequestHeader("Authorization") String token) throws Exception {
 
+        // Extraer el nombre de usuario del token JWT
+        String username = jwtUtil.extractUsername(token.substring(7)); // Eliminar "Bearer "
+
+        // Buscar el usuario con el nombre de usuario extraído del token
+        User user = userRepository.findByUsername(username);
+
+        // Verificar si el usuario existe
+        if (user == null) {
+            return ResponseEntity.status(401).body("Usuario no encontrado.");
+        }
+
+        // Buscar el evento
+        Event event = eventRepository.findById(eventId).orElse(null);
+        if (event == null) {
+            return ResponseEntity.status(404).body("Evento no encontrado.");
+        }
+
+        // Verificar si el usuario es el organizador o administrador
+        if (event.getOrganizer().getId() != user.getId() && user.getRole() != Role.ADMINISTRADOR) {
+            return ResponseEntity.status(403).body("No tienes permisos para editar este evento.");
+        }
+
+        // Actualizar los datos del evento
+        event.setTitle(title);
+        event.setDescription(description);
+        event.setAvailableTickets(availableTickets);
+        event.setLocalizacion(localizacion);
+        event.setPrice(price);
+
+        // Actualizar la fecha del evento
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
+        Date eventDate = sdf.parse(date);
+        event.setDate(eventDate);
+
+        // Actualizar la imagen si se proporciona
+        if (image != null && !image.isEmpty()) {
+            String originalFileName = StringUtils.cleanPath(image.getOriginalFilename());
+
+            // Eliminar la imagen anterior si existe
+            File oldImage = new File(uploadDir + event.getImageUrl());
+            if (oldImage.exists()) {
+                oldImage.delete();
+            }
+
+            // Guardar la nueva imagen
+            Path targetLocation = Paths.get(uploadDir, originalFileName);
+            try {
+                Files.copy(image.getInputStream(), targetLocation, StandardCopyOption.REPLACE_EXISTING);
+            } catch (java.io.IOException e) {
+                e.printStackTrace();
+                return ResponseEntity.status(500).body("Error al guardar la imagen.");
+            }
+
+            event.setImageUrl(originalFileName);
+        }
+
+        // Si se recibieron categorías, actualizamos las categorías del evento
+        if (categoryIds != null) {
+            List<Category> categories = categoryRepository.findAllById(categoryIds);
+            event.setCategories(categories);
+        }
+
+        // Guardar los cambios en la base de datos
+        eventRepository.save(event);
+
+        return ResponseEntity.ok("Evento editado exitosamente.");
+    }
+
+
+    // Eliminar evento
+    
+
+
+    @DeleteMapping("/delete/{eventId}")
+    public ResponseEntity<?> deleteEvent(@PathVariable Long eventId, @RequestHeader("Authorization") String token) {
+        String username = jwtUtil.extractUsername(token.substring(7));
+        User user = userRepository.findByUsername(username);
+
+        if (user == null) {
+            return ResponseEntity.status(401).body("Usuario no encontrado.");
+        }
+
+        Event event = eventRepository.findById(eventId).orElse(null);
+        if (event == null) {
+            return ResponseEntity.status(404).body("Evento no encontrado.");
+        }
+
+        // Verificar si el usuario tiene permisos para eliminar
+        if (user.getRole() == Role.ADMINISTRADOR || event.getOrganizer().equals(user)) {
+            eventRepository.delete(event);
+            return ResponseEntity.ok("Evento eliminado correctamente.");
+        }
+
+        return ResponseEntity.status(403).body("Acceso no autorizado.");
+    }
+
+    
+    @GetMapping("/admin/panel")
+    public ResponseEntity<?> getEventsForAdmin(@RequestHeader("Authorization") String token) {
+        // Extraer el nombre de usuario del token JWT
+        String username = jwtUtil.extractUsername(token.substring(7)); // Eliminar "Bearer "
+
+        // Buscar el usuario con el nombre de usuario extraído del token
+        User user = userRepository.findByUsername(username);
+
+        // Verificar si el usuario existe
+        if (user == null) {
+            return ResponseEntity.status(401).body("Usuario no encontrado.");
+        }
+
+        // Si el usuario es un administrador, se devuelven todos los eventos
+        if (user.getRole() == Role.ADMINISTRADOR) {
+            List<Event> events = eventRepository.findAll();
+            List<EventDTO> eventDTOs = events.stream().map(event -> mapEventToDTO(event)).collect(Collectors.toList());
+            return ResponseEntity.ok(eventDTOs);
+        }
+
+        // Si el usuario es un organizador, solo se devuelven los eventos creados por él
+        if (user.getRole() == Role.ORGANIZADOR) {
+            List<Event> events = eventRepository.findByOrganizer(user);
+            List<EventDTO> eventDTOs = events.stream().map(event -> mapEventToDTO(event)).collect(Collectors.toList());
+            return ResponseEntity.ok(eventDTOs);
+        }
+
+        return ResponseEntity.status(403).body("Acceso no autorizado.");
+    }
+
+    // Mapeo del evento a DTO
+    private EventDTO mapEventToDTO(Event event) {
+        List<CategoryDTO> categoryDTOs = event.getCategories().stream()
+            .map(category -> new CategoryDTO(category.getId(), category.getName()))
+            .collect(Collectors.toList());
+
+        return new EventDTO(
+            event.getId(),
+            event.getTitle(),
+            event.getDescription(),
+            event.getDate(),
+            event.getSoldTickets(),
+            event.getAvailableTickets(),
+            event.getImageUrl(),
+            event.getLocalizacion(),
+            event.getPrice(),
+            event.getOrganizer().getUsername(),
+            event.getEventUrl(),
+            categoryDTOs
+        );
+    }
+
+    @GetMapping("/{eventId}")
+    public ResponseEntity<?> getEventById(@PathVariable Long eventId) {
+        // Buscar el evento por su ID
+        Event event = eventRepository.findById(eventId).orElse(null);
+        if (event == null) {
+            return ResponseEntity.status(404).body("Evento no encontrado.");
+        }
+
+        // Mapear el evento a DTO
+        EventDTO eventDTO = mapEventToDTO(event);
+
+        return ResponseEntity.ok(eventDTO);
+    }
+    
 }
+
